Trying out a way to extend lists without copying the list each time, reusing older list element parts if possible.