@@ -2,14 +2,15 @@ package soot.jimple.infoflow.data;
 
 import java.util.ArrayList;
 import java.util.Collections;
+import java.util.Iterator;
 import java.util.List;
-import java.util.ListIterator;
 
 import heros.solver.Pair;
 import soot.jimple.Stmt;
 import soot.jimple.infoflow.InfoflowConfiguration;
 import soot.jimple.infoflow.InfoflowConfiguration.PathConfiguration;
 import soot.jimple.infoflow.sourcesSinks.definitions.SourceSinkDefinition;
+import soot.jimple.infoflow.util.extensiblelist.ExtensibleList;
 
 /**
  * Extension of {@link SourceContext} that also allows a paths from the source
@@ -18,8 +19,8 @@ import soot.jimple.infoflow.sourcesSinks.definitions.SourceSinkDefinition;
  * @author Steven Arzt
  */
 public class SourceContextAndPath extends SourceContext implements Cloneable {
-	protected List<Abstraction> path = null;
-	protected List<Stmt> callStack = null;
+	protected ExtensibleList<Abstraction> path = null;
+	protected ExtensibleList<Stmt> callStack = null;
 	protected int neighborCounter = 0;
 	private int hashCode = 0;
 
@@ -35,8 +36,9 @@ public class SourceContextAndPath extends SourceContext implements Cloneable {
 		if (path == null)
 			return Collections.<Stmt>emptyList();
 		List<Stmt> stmtPath = new ArrayList<>(this.path.size());
-		for (ListIterator<Abstraction> absIt = this.path.listIterator(path.size()); absIt.hasPrevious();) {
-			Abstraction abs = absIt.previous();
+		Iterator<Abstraction> it = path.reverseIterator();
+		while (it.hasNext()) {
+			Abstraction abs = it.next();
 			if (abs.getCurrentStmt() != null) {
 				stmtPath.add(abs.getCurrentStmt());
 			}
@@ -49,9 +51,9 @@ public class SourceContextAndPath extends SourceContext implements Cloneable {
 			return null;
 
 		List<Abstraction> reversePath = new ArrayList<>(path.size());
-		ListIterator<Abstraction> it = path.listIterator(path.size());
-		while (it.hasPrevious()) {
-			reversePath.add(it.previous());
+		Iterator<Abstraction> it = path.reverseIterator();
+		while (it.hasNext()) {
+			reversePath.add(it.next());
 		}
 		return reversePath;
 	}
@@ -96,7 +98,9 @@ public class SourceContextAndPath extends SourceContext implements Cloneable {
 		if (trackPath && abs.getCurrentStmt() != null) {
 			// Do not add the very same abstraction over and over again.
 			if (this.path != null) {
-				for (Abstraction a : path) {
+				Iterator<Abstraction> it = path.reverseIterator();
+				while (it.hasNext()) {
+					Abstraction a = it.next();
 					if (a == abs)
 						return null;
 
@@ -108,14 +112,14 @@ public class SourceContextAndPath extends SourceContext implements Cloneable {
 					// If this is exactly the same abstraction as one we have
 					// seen before, we skip it. Otherwise, we would run through
 					// loops infinitely.
-					if (a.equals(abs)
-							&& a.getCurrentStmt() == abs.getCurrentStmt()
+					if (a.getCurrentStmt() == abs.getCurrentStmt()
+							&& a.equals(abs)
 							&& a.getCorrespondingCallSite() == abs.getCorrespondingCallSite())
 						return null;
 				}
 
 				// We cannot leave the same method at two different sites
-				Abstraction topAbs = path.get(path.size() - 1);
+				Abstraction topAbs = path.getLast();
 				if (topAbs.equals(abs)
 						&& topAbs.getCorrespondingCallSite() != null
 						&& topAbs.getCorrespondingCallSite() == abs.getCorrespondingCallSite()
@@ -126,7 +130,7 @@ public class SourceContextAndPath extends SourceContext implements Cloneable {
 			scap = clone();
 			// Extend the propagation path
 			if (scap.path == null)
-				scap.path = new ArrayList<Abstraction>();
+				scap.path = new ExtensibleList<Abstraction>();
 			scap.path.add(abs);
 			if (pathConfig != null
 					&& pathConfig.getMaxPathLength() > 0
@@ -139,7 +143,7 @@ public class SourceContextAndPath extends SourceContext implements Cloneable {
 			if (scap == null)
 				scap = this.clone();
 			if (scap.callStack == null)
-				scap.callStack = new ArrayList<Stmt>();
+				scap.callStack = new ExtensibleList<Stmt>();
 			else if (pathConfig != null
 					&& pathConfig.getMaxCallStackSize() > 0
 					&& scap.callStack.size() >= pathConfig.getMaxCallStackSize())
@@ -163,7 +167,12 @@ public class SourceContextAndPath extends SourceContext implements Cloneable {
 			return null;
 
 		SourceContextAndPath scap = clone();
-		return new Pair<>(scap, scap.callStack.remove(scap.callStack.size() - 1));
+		Object c = scap.callStack.removeLast();
+		if (c instanceof ExtensibleList) {
+			scap.callStack = (ExtensibleList<Stmt>) c;
+			return new Pair<>(scap, scap.callStack.getLast());
+		} else
+			return new Pair<>(scap, (Stmt) c);
 	}
 
 	/**
@@ -237,9 +246,9 @@ public class SourceContextAndPath extends SourceContext implements Cloneable {
 	public SourceContextAndPath clone() {
 		final SourceContextAndPath scap = new SourceContextAndPath(definition, accessPath, stmt, userData);
 		if (path != null)
-			scap.path = new ArrayList<Abstraction>(this.path);
+			scap.path = new ExtensibleList<Abstraction>(this.path);
 		if (callStack != null)
-			scap.callStack = new ArrayList<Stmt>(callStack);
+			scap.callStack = new ExtensibleList<Stmt>(callStack);
 		return scap;
 	}
 
